[project]
name = "trackllm-website"
version = "0.1.0"
description = "TrackLLM website"
readme = "README.md"
authors = [
    { name = "Timothee Chauvin", email = "timothee.chauvin28@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beartype>=0.22.4",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "pydantic-settings[yaml]>=2.11.0",
]

[project.scripts]
trackllm-website = "trackllm_website:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
